--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@popperjs/core": "^2.6.0",
+    "angular-particle": "^1.0.4",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "ngx-pagination": "^5.0.0",
