--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.6",
     "@popperjs/core": "^2.6.0",
     "angular-particle": "^1.0.4",
+    "aos": "^2.3.4",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "ngx-pagination": "^5.0.0",
